fix vk icon in footer section && change copyrights

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://vk.com/frontendsu_event" class="icon fa-vkontakte"><span class="label">Twitter</span></a></li>
+							<li><a href="https://vk.com/frontendsu_event" class="icon fa-vk"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy;  FrontHub. 2015 </li><li>Дизайн: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
