заменил название в шапке

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">FrontHub 2015</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
