меню на русском

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<a href="#menu" class="menuToggle"><span>Меню</span></a>
 									<div id="menu">
 										<ul>
 										<!-- TODO: add links to main page -->
