изменил главный заголовок

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>FRONTHUB--15</h2>
+							<h2>FRONTHUB-2015</h2>
 							<p>Проводим конфы<br />
 							митапы и выездные холивары!<br />
 							как было <a href="http://2014.front-end.su">в прошлом году</a>.</p>
