обновил пункты меню

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 									<div id="menu">
 										<ul>
 										<!-- TODO: add links to main page -->
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li><a href="index.html">Главная</a></li>
+											<li><a href="generic.html">Кто мы?</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											
 										</ul>
