страница кто мы

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<ul>
 										<!-- TODO: add links to main page -->
 											<li><a href="index.html">Главная</a></li>
-											<li><a href="generic.html">Кто мы?</a></li>
+											<li><a href="about.html">Кто мы?</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											
 										</ul>
