--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+					<!-- <section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="http://2014.front-end.su/images/msinyakov.jpg" alt="" /></div><div class="content">
 								<h2>МИХАИЛ СИНЯКОВ</h2>
@@ -97,9 +97,9 @@
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
-					</section>
+					</section> -->
 
-				
+
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
