Change place and date.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>8 ноября 2014, 11:00</h2>
-								<p><b>«Хабкафе»</b> г. Ульяновск, ул. Железной дивизии, 5</p>
+								<h2>Ноябрь 2015</h2>
+								<p>г. Ульяновск</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Участвовать</a></li>
