--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>НЕОЖИДАННАЯ КОНФЕРЕНЦИЯ ПО ФРОНТЕНДУ v2.0</h2>
-								<p>Группа смелых разработчиков из разных компаний вышла из тени и поделилась своим опытом и знаниями из мира вёрстки, браузеров и современных технологий.</p>
+								<p>Это снова мы! В этом году мы снова появимся на публике и поделимся самым интересным что есть в мире Front-End на текущий момент. Stay tuned!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-html5 major style1"><span class="label"></span></span></li>
