--- a/index.html
+++ b/index.html
@@ -1,144 +1,149 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Spectral by HTML5 UP
+    html5up.net | @n33co
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Spectral by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="landing">
+<head>
+    <title>FRONTHUB-15</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <!--[if lte IE 8]>
+        <script src="assets/js/ie/html5shiv.js"></script>
+    <![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css"/>
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="assets/css/ie8.css"/>
+    <![endif]-->
+    <!--[if lte IE 9]>
+        <link rel="stylesheet" href="assets/css/ie9.css"/>
+    <![endif]-->
+</head>
+<body class="landing">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<!-- Page Wrapper -->
+<div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+    <!-- Header -->
+    <header id="header" class="alt">
+        <h1><a href="index.html">FRONTHUB-15</a></h1>
+        <nav id="nav">
+            <ul>
+                <li class="special">
+                    <a href="#menu" class="menuToggle"><span>Архив</span></a>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>FRONTHUB--15</h2>
-							<p>Проводим конфы<br />
-							митапы и выездные холивары!<br />
-							как было <a href="http://2014.front-end.su">в прошлом году</a>.</p>
-							<ul class="actions">
-								<li><a href="#" class="button special">Участвовать</a></li>
-							</ul>
-						</div>
-						<a href="#one" class="more scrolly">Узнать больше</a>
-					</section>
+                    <div id="menu">
+                        <ul>
+                            <li><a href="index.html">2015</a></li>
+                            <li><a href="http://2014.front-end.su/" target="_blank">2014</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>НЕОЖИДАННАЯ КОНФЕРЕНЦИЯ ПО ФРОНТЕНДУ v2.0</h2>
-								<p>Это снова мы! В этом году мы снова появимся на публике и поделимся самым интересным что есть в мире Front-End на текущий момент. Stay tuned!</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-html5 major style1"><span class="label"></span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label"></span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label"></span></span></li>
-							</ul>
-						</div>
-					</section>
+    <!-- Banner -->
+    <section id="banner">
+        <div class="inner">
+            <h2>FRONTHUB-15</h2>
 
-				<!-- Two -->
-					<!-- <section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="http://2014.front-end.su/images/msinyakov.jpg" alt="" /></div><div class="content">
-								<h2>МИХАИЛ СИНЯКОВ</h2>
-								<p>ПРЕПРОЦЕССОР КАК НОВЫЙ СУПЕР ГЕРОЙ!</p>
+            <p>Проводим конфы<br/>
+                митапы и выездные холивары!<br/>
+                как было <a href="http://2014.front-end.su" target="_blank">в прошлом году</a>.</p>
+            <ul class="actions">
+                <li><a href="#" class="button special">Участвовать</a></li>
+            </ul>
+        </div>
+        <a href="#one" class="more scrolly">Узнать больше</a>
+    </section>
+
+    <!-- One -->
+    <section id="one" class="wrapper style1 special">
+        <div class="inner">
+            <header class="major">
+                <h2>НЕОЖИДАННАЯ КОНФЕРЕНЦИЯ ПО ФРОНТЕНДУ v2.0</h2>
+
+                <p>Это снова мы! В этом году мы еще раз появимся на публике и поделимся самыми интересными  новостями мира Front-End. Stay tuned!</p>
+            </header>
+            <ul class="icons major">
+                <li><span class="icon fa-html5 major style1"><span class="label"></span></span></li>
+                <li><span class="icon fa-heart-o major style2"><span class="label"></span></span></li>
+                <li><span class="icon fa-code major style3"><span class="label"></span></span></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Two -->
+    <!-- <section id="two" class="wrapper alt style2">
+        <section class="spotlight">
+            <div class="image"><img src="http://2014.front-end.su/images/msinyakov.jpg" alt="" /></div><div class="content">
+                <h2>МИХАИЛ СИНЯКОВ</h2>
+                <p>ПРЕПРОЦЕССОР КАК НОВЫЙ СУПЕР ГЕРОЙ!</p>
 <ul>
 
 <li>Скорость Flash'a</li>
 <li>Сила Hulk'a</li>
 <li>Гибкость Mister Fantastic'a</li>
 </ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="http://2014.front-end.su/images/nikbelikov.jpg" alt="" /></div><div class="content">
-								<h2>НИКОЛАЙ БЕЛИКОВ</h2>
-								<p>«ЛЕНИВАЯ ВЕРСТКА»</p>
-								<p>Как ускорять верстку с помощью магии </p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-					</section> -->
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image"><img src="http://2014.front-end.su/images/nikbelikov.jpg" alt="" /></div><div class="content">
+                <h2>НИКОЛАЙ БЕЛИКОВ</h2>
+                <p>«ЛЕНИВАЯ ВЕРСТКА»</p>
+                <p>Как ускорять верстку с помощью магии </p>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+                <h2>Augue eleifend aliquet<br />
+                sed condimentum</h2>
+                <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+            </div>
+        </section>
+    </section> -->
 
+    <!-- CTA -->
+    <section id="cta" class="wrapper style4">
+        <div class="inner">
+            <header>
+                <h2>Ноябрь 2015</h2>
 
+                <p>г. Ульяновск</p>
+            </header>
+            <ul class="actions vertical">
+                <li><a href="#" class="button fit special">Участвовать</a></li>
+                <li><a href="http://2014.front-end.su/" target="_blank" class="button fit">2014</a></li>
+            </ul>
+        </div>
+    </section>
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Ноябрь 2015</h2>
-								<p>г. Ульяновск</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Участвовать</a></li>
-								<li><a href="http://2014.front-end.su/" class="button fit">2014</a></li>
-							</ul>
-						</div>
-					</section>
+    <!-- Footer -->
+    <footer id="footer">
+        <ul class="icons">
+            <li><a href="https://vk.com/frontendsu_event" class="icon fa-vk"><span class="label">vk</span></a></li>
+            <li><a href="https://twitter.com/frontendsu" class="icon fa-twitter"><span class="label">twitter</span></a></li>
+        </ul>
+        <ul class="copyright">
+            <li>&copy; Untitled</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+    </footer>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+</div>
 
-			</div>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<!--[if lte IE 8]>
+    <script src="assets/js/ie/respond.min.js"></script>
+<![endif]-->
+<script src="assets/js/main.js"></script>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
+</body>
 </html>
