--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Header -->
     <header id="header" class="alt">
-        <h1><a href="index.html">FRONTHUB-15</a></h1>
+        <h1><a href="index.html">FRONTHUB-2015</a></h1>
         <nav id="nav">
             <ul>
                 <li class="special">
@@ -50,7 +50,7 @@
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
-            <h2>FRONTHUB-15</h2>
+            <h2>FRONTHUB-2015</h2>
 
             <p>Проводим конфы<br/>
                 митапы и выездные холивары!<br/>
@@ -68,7 +68,11 @@
             <header class="major">
                 <h2>НЕОЖИДАННАЯ КОНФЕРЕНЦИЯ ПО ФРОНТЕНДУ v2.0</h2>
 
-                <p>Это снова мы! В этом году мы еще раз появимся на публике и поделимся самыми интересными  новостями мира Front-End. Stay tuned!</p>
+                <p>
+                  Это снова мы!<br>
+                  И мы снова расскажем вам об интересных штуках мира Front-End!<br>
+                  Welcome!
+                </p>
             </header>
             <ul class="icons major">
                 <li><span class="icon fa-html5 major style1"><span class="label"></span></span></li>
