Change conference date and place

--- a/index.html
+++ b/index.html
@@ -116,9 +116,13 @@
     <section id="cta" class="wrapper style4">
         <div class="inner">
             <header>
-                <h2>Ноябрь 2015</h2>
+                <h2>14 ноября 2015, 11:00</h2>
 
-                <p>г. Ульяновск</p>
+                <p>
+                  «Хаб-Кафе», ТЦ «Спартак»
+                  <br>
+                  г. Ульяновск, ул. Железной Дивизии, 5Б
+                </p>
             </header>
             <ul class="actions vertical">
                 <li><a href="#participate-form" class="button fit special popup-with-form">Участвовать</a></li>
