Add sponsors and speakers blocks.

--- a/index.html
+++ b/index.html
@@ -83,20 +83,15 @@
     </section>
 
     <!-- Two -->
-    <!-- <section id="two" class="wrapper alt style2">
+    <section id="two" class="wrapper alt style2">
         <section class="spotlight">
-            <div class="image"><img src="http://2014.front-end.su/images/msinyakov.jpg" alt="" /></div><div class="content">
-                <h2>МИХАИЛ СИНЯКОВ</h2>
-                <p>ПРЕПРОЦЕССОР КАК НОВЫЙ СУПЕР ГЕРОЙ!</p>
-<ul>
-
-<li>Скорость Flash'a</li>
-<li>Сила Hulk'a</li>
-<li>Гибкость Mister Fantastic'a</li>
-</ul>
-            </div>
+            <div class="image"><img src="http://lorempixel.com/600/400/cats/"></div>
+              <div class="content">
+                <h2>Есть о чём рассказать?</h2>
+                <p>Присылайте свой доклад нам на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a></p>
+              </div>
         </section>
-        <section class="spotlight">
+        <!-- <section class="spotlight">
             <div class="image"><img src="http://2014.front-end.su/images/nikbelikov.jpg" alt="" /></div><div class="content">
                 <h2>НИКОЛАЙ БЕЛИКОВ</h2>
                 <p>«ЛЕНИВАЯ ВЕРСТКА»</p>
@@ -109,9 +104,48 @@
                 sed condimentum</h2>
                 <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
             </div>
-        </section>
-    </section> -->
+        </section> -->
+    </section>
 
+    <section id="three" class="wrapper style3 special">
+			<div class="inner">
+				<header class="major">
+					<h2>Ищем спонсоров</h2>
+					<p>
+            Хотите помочь в проведении и организации мероприятия на взаимовыгодных условиях?
+            <br>
+            <br>
+            Пишите нам на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a>
+          </p>
+				</header>
+				<!-- <ul class="features">
+					<li class="icon fa-paper-plane-o">
+						<h3>Arcu accumsan</h3>
+						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+					</li>
+					<li class="icon fa-laptop">
+						<h3>Ac Augue Eget</h3>
+						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+					</li>
+					<li class="icon fa-code">
+						<h3>Mus Scelerisque</h3>
+						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+					</li>
+					<li class="icon fa-headphones">
+						<h3>Mauris Imperdiet</h3>
+						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+					</li>
+					<li class="icon fa-heart-o">
+						<h3>Aenean Primis</h3>
+						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+					</li>
+					<li class="icon fa-flag-o">
+						<h3>Tortor Ut</h3>
+						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+					</li>
+				</ul> -->
+			</div>
+		</section>
     <!-- CTA -->
     <section id="cta" class="wrapper style4">
         <div class="inner">
