--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <!--[if lte IE 8]>
         <script src="assets/js/ie/html5shiv.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="assets/css/ie8.css"/>
@@ -30,7 +29,7 @@
 
     <!-- Header -->
     <header id="header" class="alt">
-        <h1><a href="index.html">FRONTHUB-2015</a></h1>
+        <h1><a href="/">FRONTHUB-2015</a></h1>
         <nav id="nav">
             <ul>
                 <li class="special">
@@ -38,7 +37,6 @@
 
                     <div id="menu">
                         <ul>
-                            <li><a href="index.html">2015</a></li>
                             <li><a href="http://2014.front-end.su/" target="_blank">2014</a></li>
                         </ul>
                     </div>
@@ -52,12 +50,9 @@
         <div class="inner">
             <h2>FRONTHUB-2015</h2>
 
-            <p>Проводим конфы<br/>
-                митапы и выездные холивары!<br/>
-                как было <a href="http://2014.front-end.su" target="_blank">в прошлом году</a>.</p>
-            <ul class="actions">
-                <li><a href="#participate-form" class="button special popup-with-form">Участвовать</a></li>
-            </ul>
+            <p>14 ноября 2015, 11:00</p>
+            <p>«Хаб-Кафе», ТЦ «Спартак» <br/>
+                г. Ульяновск, ул. Железной Дивизии, 5Б</p>
         </div>
         <a href="#one" class="more scrolly">Узнать больше</a>
     </section>
@@ -88,7 +83,7 @@
             <div class="image"><img src="http://lorempixel.com/600/400/cats/"></div>
               <div class="content">
                 <h2>Есть о чём рассказать?</h2>
-                <p>Присылайте свой доклад нам на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a></p>
+                <p>Присылайте свою заявку на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a></p>
               </div>
         </section>
         <!-- <section class="spotlight">
@@ -108,44 +103,45 @@
     </section>
 
     <section id="three" class="wrapper style3 special">
-			<div class="inner">
-				<header class="major">
-					<h2>Ищем спонсоров</h2>
-					<p>
-            Хотите помочь в проведении и организации мероприятия на взаимовыгодных условиях?
-            <br>
-            <br>
-            Пишите нам на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a>
-          </p>
-				</header>
-				<!-- <ul class="features">
-					<li class="icon fa-paper-plane-o">
-						<h3>Arcu accumsan</h3>
-						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-					</li>
-					<li class="icon fa-laptop">
-						<h3>Ac Augue Eget</h3>
-						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-					</li>
-					<li class="icon fa-code">
-						<h3>Mus Scelerisque</h3>
-						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-					</li>
-					<li class="icon fa-headphones">
-						<h3>Mauris Imperdiet</h3>
-						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-					</li>
-					<li class="icon fa-heart-o">
-						<h3>Aenean Primis</h3>
-						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-					</li>
-					<li class="icon fa-flag-o">
-						<h3>Tortor Ut</h3>
-						<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-					</li>
-				</ul> -->
-			</div>
-		</section>
+        <div class="inner">
+            <header class="major">
+                <h2>Ищем спонсоров</h2>
+
+                <p>
+                    Хотите помочь в проведении и организации мероприятия на взаимовыгодных условиях?
+                    <br>
+                    <br>
+                    Пишите нам на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a>
+                </p>
+            </header>
+            <!-- <ul class="features">
+                <li class="icon fa-paper-plane-o">
+                    <h3>Arcu accumsan</h3>
+                    <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+                </li>
+                <li class="icon fa-laptop">
+                    <h3>Ac Augue Eget</h3>
+                    <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+                </li>
+                <li class="icon fa-code">
+                    <h3>Mus Scelerisque</h3>
+                    <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+                </li>
+                <li class="icon fa-headphones">
+                    <h3>Mauris Imperdiet</h3>
+                    <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+                </li>
+                <li class="icon fa-heart-o">
+                    <h3>Aenean Primis</h3>
+                    <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+                </li>
+                <li class="icon fa-flag-o">
+                    <h3>Tortor Ut</h3>
+                    <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+                </li>
+            </ul> -->
+        </div>
+    </section>
     <!-- CTA -->
     <section id="cta" class="wrapper style4">
         <div class="inner">
@@ -153,15 +149,11 @@
                 <h2>14 ноября 2015, 11:00</h2>
 
                 <p>
-                  «Хаб-Кафе», ТЦ «Спартак»
-                  <br>
-                  г. Ульяновск, ул. Железной Дивизии, 5Б
+                    «Хаб-Кафе», ТЦ «Спартак»
+                    <br>
+                    г. Ульяновск, ул. Железной Дивизии, 5Б
                 </p>
             </header>
-            <ul class="actions vertical">
-                <li><a href="#participate-form" class="button fit special popup-with-form">Участвовать</a></li>
-                <li><a href="http://2014.front-end.su/" target="_blank" class="button fit">2014</a></li>
-            </ul>
         </div>
     </section>
 
@@ -172,38 +164,16 @@
             <li><a href="https://twitter.com/frontendsu" class="icon fa-twitter" target="_blank"><span class="label">twitter</span></a></li>
         </ul>
         <ul class="copyright">
-            <li>&copy; fronthub. 2015</li>
+            <li>&copy; fronthub.ru (2014-2015)</li>
         </ul>
     </footer>
 
 </div>
 
-<form action="#participate-form" id="participate-form" class="white-popup-block mfp-hide">
-    <h1>Подать заявку на участие</h1>
-    <fieldset>
-        <ol>
-            <li>
-                <label for="name">Мы бы хотели знать ваше</label>
-                <input id="name" name="name" type="text" placeholder="Имя" required="">
-            </li>
-            <li>
-                <label for="email">Мы свяжемся с вами по указанной ниже электронной почте</label>
-                <input id="email" name="email" type="email" placeholder="Email" required="">
-            </li>
-            <li>
-                <label for="textarea">Сообщение</label><br>
-                <textarea id="textarea" name="text" placeholder="Опишите тему доклада"></textarea>
-            </li>
-            <button type="submit">отправить</button>
-        </ol>
-    </fieldset>
-</form>
-
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.scrollex.min.js"></script>
 <script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <!--[if lte IE 8]>
