--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <!-- Footer -->
     <footer id="footer">
         <ul class="icons">
-            <li><a href="https://vk.com/frontendsu_event" class="icon fa-vk" target="_blank"><span class="label">vk</span></a></li>
+            <li><a href="https://vk.com/fronthub_ulsk" class="icon fa-vk" target="_blank"><span class="label">vk</span></a></li>
             <li><a href="https://twitter.com/frontendsu" class="icon fa-twitter" target="_blank"><span class="label">twitter</span></a></li>
         </ul>
         <ul class="copyright">
