--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
                 <p>Присылайте свою заявку на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a></p>
               </div>
         </section>
+        <section class="spotlight">
+            <div class="image"><img src="/images/ezhkov.jpg" alt="" /></div><div class="content">
+                <h2>Custom vs. Native</h2>
+                <p>Противостояние элементов форм.</p>
+                <blockquote>Денис Ежков, ITECH.group</blockquote>
+            </div>
+        </section>
         <!-- <section class="spotlight">
             <div class="image"><img src="http://2014.front-end.su/images/nikbelikov.jpg" alt="" /></div><div class="content">
                 <h2>НИКОЛАЙ БЕЛИКОВ</h2>
