--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
     <!-- Two -->
     <section id="two" class="wrapper alt style2">
         <section class="spotlight">
+            <div class="image"><img src="images/ezhkov.jpg" alt="" /></div><div class="content">
+                <h2>Custom vs. Native</h2>
+                <p>Противостояние элементов форм.</p>
+                <blockquote>Денис Ежков, ITECH.group</blockquote>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image"><img src="http://lorempixel.com/600/400/cats/"></div>
               <div class="content">
                 <h2>Есть о чём рассказать?</h2>
                 <p>Присылайте свою заявку на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a></p>
               </div>
-        </section>
-        <section class="spotlight">
-            <div class="image"><img src="/images/ezhkov.jpg" alt="" /></div><div class="content">
-                <h2>Custom vs. Native</h2>
-                <p>Противостояние элементов форм.</p>
-                <blockquote>Денис Ежков, ITECH.group</blockquote>
-            </div>
         </section>
         <!-- <section class="spotlight">
             <div class="image"><img src="http://2014.front-end.su/images/nikbelikov.jpg" alt="" /></div><div class="content">
