--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
             </div>
         </section>
         <section class="spotlight">
+            <div class="image"><img src="images/vislov.jpg" alt="" /></div><div class="content">
+                <h2>Чо там у шрифтов?</h2>
+                <p>Современности веб-шрифтов рассказ</p>
+                <blockquote>Дима Вислов, Hexlet</blockquote>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image"><img src="http://lorempixel.com/600/400/cats/"></div>
               <div class="content">
                 <h2>Есть о чём рассказать?</h2>
