--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section class="spotlight">
             <div class="image"><img src="images/ezhkov.jpg" alt="" /></div><div class="content">
                 <h2>Custom vs. Native</h2>
-                <p>Противостояние элементов форм.</p>
+                <p>Противостояние элементов форм</p>
                 <blockquote>Денис Ежков, ITECH.group</blockquote>
             </div>
         </section>
@@ -106,6 +106,13 @@
                 <h2>Чо там у шрифтов?</h2>
                 <p>Современности веб-шрифтов рассказ</p>
                 <blockquote>Дима Вислов, Hexlet</blockquote>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image"><img src="images/vaganov.jpg" alt="" /></div><div class="content">
+                <h2>Жизнь после JS-фреймворков</h2>
+                <p>А может ну их? (на самом деле нет)</p>
+                <blockquote>Андрей Ваганов, AdvantShop.net</blockquote>
             </div>
         </section>
         <section class="spotlight">
