add shoot speaker

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
             </div>
         </section>
         <section class="spotlight">
+            <div class="image"><img src="images/shoot.jpg" alt="" /></div><div class="content">
+                <h2>Мы вставили сайт в ваш Email</h2>
+                <p>Идеальный Email</p>
+                <p>Как вылечить боль при верстке писем?</p>
+                <p>Что почтовики нам готовят?</p>
+                <blockquote>Миша aka Shoot, Tittygram / X-cart</blockquote>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image"><img src="http://lorempixel.com/600/400/cats/"></div>
               <div class="content">
                 <h2>Есть о чём рассказать?</h2>
