--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
         <section class="spotlight">
             <div class="image"><img src="images/shoot.jpg" alt="" /></div><div class="content">
                 <h2>Мы вставили сайт в ваш Email</h2>
-                <p>Идеальный Email</p>
-                <p>Как вылечить боль при верстке писем?</p>
-                <p>Что почтовики нам готовят?</p>
+                <p>
+                  Идеальный Email<br>
+                  Как вылечить боль при верстке писем?<br>
+                  Что почтовики нам готовят?
+                </p>
                 <blockquote>Миша aka Shoot, Tittygram / X-cart</blockquote>
             </div>
         </section>
