добавил лого айтека и метрику

--- a/index.html
+++ b/index.html
@@ -151,7 +151,12 @@
             <ul class="features">
                 <li class="icon">
                   <a href="http://hubcafe.ru" target="_blank">
-                    <img src="images/hubcafe.jpg" height="150">
+                    <img src="images/hubcafe.jpg" height="150" alt="Хаб-кафе" title="Хаб-кафе">
+                  </a>
+                </li>
+                <li class="icon">
+                  <a href="http://itech-group.ru/" target="_blank">
+                    <img src="images/itech.png" height="150" alt="itech group" title="itech group">
                   </a>
                 </li>
             </ul>
@@ -186,6 +191,7 @@
 </div>
 
 <!-- Scripts -->
+<!-- Yandex.Metrika counter --><script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter32880110 = new Ya.Metrika({ id:32880110, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="https://mc.yandex.ru/watch/32880110" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.scrollex.min.js"></script>
 <script src="assets/js/jquery.scrolly.min.js"></script>
