Add free entrance info.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <p>14 ноября 2015, 11:00</p>
             <p>«Хаб-Кафе», ТЦ «Спартак» <br/>
                 г. Ульяновск, ул. Железной Дивизии, 5Б</p>
+            <p>Вход свободный</p>
         </div>
         <a href="#one" class="more scrolly">Узнать больше</a>
     </section>
@@ -174,6 +175,9 @@
                     «Хаб-Кафе», ТЦ «Спартак»
                     <br>
                     г. Ульяновск, ул. Железной Дивизии, 5Б
+                    <br>
+                    <br>
+                    Вход свободный
                 </p>
             </header>
         </div>
