--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
             </div>
         </section>
         <section class="spotlight">
+            <div class="image"><img src="images/nikbelikov.jpg" alt="nikbelikov's photo" /></div>
+            <div class="content">
+                <h2>Увидеть больше</h2>
+                <p>как делать сайты, адаптированные для слепых и слабовидящих людей</p>
+                <blockquote>Николай Беликов, Simbirsoft, <a href="http://nikbelikov.ru/" target="_blank">nikbelikov.ru</a></blockquote>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image"><img src="http://lorempixel.com/600/400/cats/"></div>
               <div class="content">
                 <h2>Есть о чём рассказать?</h2>
