Add SECON info partner.

--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
                   </a>
                 </li>
             </ul>
+
+            <h2>Информационные партнёры</h2>
+
+            <ul class="features">
+                <li class="icon">
+                  <a href="http://secon.ru" target="_blank">
+                    <img src="images/partner-secon.jpg" height="150" alt="SECON" title="SECON">
+                  </a>
+                </li>
+            </ul>
         </div>
     </section>
     <!-- CTA -->
