Add Simtech as a sponsor.

--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                     <img src="images/itech.png" height="150" alt="itech group" title="itech group">
                   </a>
                 </li>
+                <li class="icon">
+                  <a href="http://simtech.ru/" target="_blank">
+                    <img src="images/sponsor-simtech.jpg" height="150" alt="Simtech" title="Simtech">
+                  </a>
+                </li>
             </ul>
 
             <h2>Информационные партнёры</h2>
