--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <title>FRONTHUB-15</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+
     <!--[if lte IE 8]>
         <script src="assets/js/ie/html5shiv.js"></script>
     <![endif]-->
+
     <link rel="stylesheet" href="assets/css/main.css"/>
     <style>
       .features li {
@@ -67,7 +72,7 @@
 
             <p>14 ноября 2015, 11:00</p>
             <p>«Хаб-Кафе», ТЦ «Спартак» <br/>
-                г. Ульяновск, ул. Железной Дивизии, 5Б</p>
+                г.&nbsp;Ульяновск, ул.&nbsp;Железной&nbsp;Дивизии, 5Б</p>
             <p>Вход свободный</p>
         </div>
         <a href="#one" class="more scrolly">Узнать больше</a>
@@ -112,7 +117,7 @@
         <section class="spotlight">
             <div class="image"><img src="images/vaganov.jpg" alt="" /></div><div class="content">
                 <h2>Жизнь после JS-фреймворков</h2>
-                <p>А может ну их? (на самом деле нет)</p>
+                <p>А, может, ну их? (на самом деле нет)</p>
                 <blockquote>Андрей Ваганов, AdvantShop.net</blockquote>
             </div>
         </section>
@@ -131,12 +136,12 @@
             <div class="image"><img src="images/nikbelikov.jpg" alt="nikbelikov's photo" /></div>
             <div class="content">
                 <h2>Увидеть больше</h2>
-                <p>как делать сайты, адаптированные для слепых и слабовидящих людей</p>
+                <p>Как делать сайты, адаптированные для слепых и слабовидящих людей</p>
                 <blockquote>Николай Беликов, Simbirsoft, <a href="http://nikbelikov.ru/" target="_blank">nikbelikov.ru</a></blockquote>
             </div>
         </section>
         <section class="spotlight">
-            <div class="image"><img src="http://lorempixel.com/600/400/cats/"></div>
+            <div class="image"><img src="http://lorempixel.com/960/720/cats/"></div>
               <div class="content">
                 <h2>Есть о чём рассказать?</h2>
                 <p>Присылайте свою заявку на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a></p>
@@ -172,17 +177,17 @@
                 </li>
                 <li class="icon">
                   <a href="http://simtech.ru/" target="_blank">
-                    <img src="images/sponsor-simtech.jpg" height="150" alt="Simtech" title="Simtech">
+                    <img src="images/simtech.png" height="150" alt="Simtech" title="Simtech">
                   </a>
                 </li>
             </ul>
 
-            <h2>Информационные партнёры</h2>
+            <h2>Информационные партнёры:</h2>
 
             <ul class="features">
                 <li class="icon">
                   <a href="http://secon.ru" target="_blank">
-                    <img src="images/partner-secon.jpg" height="150" alt="SECON" title="SECON">
+                    <img src="images/secon.png" height="150" alt="SECON" title="SECON">
                   </a>
                 </li>
             </ul>
@@ -197,7 +202,7 @@
                 <p>
                     «Хаб-Кафе», ТЦ «Спартак»
                     <br>
-                    г. Ульяновск, ул. Железной Дивизии, 5Б
+                    г.&nbsp;Ульяновск, ул.&nbsp;Железной&nbsp;Дивизии, 5Б
                     <br>
                     <br>
                     Вход свободный
