--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <p>14 ноября 2015, 11:00</p>
             <p>«Хаб-Кафе», ТЦ «Спартак» <br/>
-                г.&nbsp;Ульяновск, ул.&nbsp;Железной&nbsp;Дивизии, 5Б</p>
+                г.&nbsp;Ульяновск, ул.&nbsp;Железной Дивизии, 5Б</p>
             <p>Вход свободный</p>
         </div>
         <a href="#one" class="more scrolly">Узнать больше</a>
@@ -202,7 +202,7 @@
                 <p>
                     «Хаб-Кафе», ТЦ «Спартак»
                     <br>
-                    г.&nbsp;Ульяновск, ул.&nbsp;Железной&nbsp;Дивизии, 5Б
+                    г.&nbsp;Ульяновск, ул.&nbsp;Железной Дивизии, 5Б
                     <br>
                     <br>
                     Вход свободный
