add tittygram && x-cart sponsors logos

--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
                   </a>
                 </li>
                 <li class="icon">
+                  <a href="https://www.x-cart.com/" target="_blank">
+                    <img src="images/x-cart-logo.png" height="150" alt="X-cart" title="X-cart">
+                  </a>
+                </li>
+
+                <li class="icon">
                   <a href="http://itech-group.ru/" target="_blank">
                     <img src="images/itech.png" height="150" alt="itech group" title="itech group">
                   </a>
@@ -188,6 +194,11 @@
                 <li class="icon">
                   <a href="http://secon.ru" target="_blank">
                     <img src="images/secon.png" height="150" alt="SECON" title="SECON">
+                  </a>
+                </li>
+                <li class="icon">
+                  <a href="https://tittygram.com/ru/" target="_blank">
+                    <img src="images/ttg-logo.png" height="150" alt="Tittygram" title="Tittygram">
                   </a>
                 </li>
             </ul>
