Добавил свой доклад

--- a/index.html
+++ b/index.html
@@ -141,6 +141,15 @@
             </div>
         </section>
         <section class="spotlight">
+            <div class="image"><img src="images/nayanov.jpg" alt="" /></div><div class="content">
+                <h2>Post-HTML</h2>
+                <p>
+                  html6, постпроцессоры, БЭМ, вот это все.
+                </p>
+                <blockquote>Олег Наянов, Digital Zone</blockquote>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image"><img src="http://lorempixel.com/960/720/cats/"></div>
               <div class="content">
                 <h2>Есть о чём рассказать?</h2>
