--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
     <!-- Two -->
     <section id="two" class="wrapper alt style2">
         <section class="spotlight">
+            <div class="image"><img src="images/tregubov.jpg" alt="" /></div><div class="content">
+                <h2>Дизайн для front-end</h2>
+                <p>Для тех из нас, которым приходится быть «немного дизайнерами».</p>
+                <blockquote>Ярослав Трегубов, фрилансер</blockquote>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image"><img src="images/ezhkov.jpg" alt="" /></div><div class="content">
                 <h2>Custom vs. Native</h2>
                 <p>Противостояние элементов форм</p>
@@ -148,13 +155,6 @@
                 </p>
                 <blockquote>Олег Наянов, Digital Zone</blockquote>
             </div>
-        </section>
-        <section class="spotlight">
-            <div class="image"><img src="http://lorempixel.com/960/720/cats/"></div>
-              <div class="content">
-                <h2>Есть о чём рассказать?</h2>
-                <p>Присылайте свою заявку на <a href="mailto:frontendsu@gmail.com">frontendsu@gmail.com</a></p>
-              </div>
         </section>
     </section>
 
