--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
                 <blockquote>Олег Наянов, Digital Zone</blockquote>
             </div>
         </section>
+        <section class="spotlight">
+            <div class="image"><img src="images/tema-khlebnikov.jpg" alt="" /></div>
+            <div class="content">
+                <h2>Оптимизация CSS и JS в Битриксе</h2>
+                <p>Загружаем только необходимые файлы<br />
+                    Объединяем и сжимаем средствами Битрикса<br />
+                    Перемещаем JS в конец страницы</p>
+                <blockquote>Артём Хлебников, фрилансер</blockquote>
+            </div>
+        </section>
     </section>
 
     <section id="three" class="wrapper style3 special">
