--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <section id="two" class="wrapper alt style2">
         <section class="spotlight">
             <div class="image"><img src="images/tregubov.jpg" alt="" /></div><div class="content">
+                <time>11:00-11:30</time>
                 <h2>Дизайн для front-end</h2>
                 <p>Для тех из нас, которым приходится быть «немного дизайнерами».</p>
                 <blockquote>Ярослав Трегубов, фрилансер</blockquote>
@@ -109,6 +110,7 @@
         </section>
         <section class="spotlight">
             <div class="image"><img src="images/ezhkov.jpg" alt="" /></div><div class="content">
+                <time>11:30-12:00</time>
                 <h2>Custom vs. Native</h2>
                 <p>Противостояние элементов форм</p>
                 <blockquote>Денис Ежков, ITECH.group</blockquote>
@@ -116,6 +118,7 @@
         </section>
         <section class="spotlight">
             <div class="image"><img src="images/vislov.jpg" alt="" /></div><div class="content">
+                <time>12:00-12:30</time>
                 <h2>Чо там у шрифтов?</h2>
                 <p>Современности веб-шрифтов рассказ</p>
                 <blockquote>Дима Вислов, Hexlet</blockquote>
@@ -123,6 +126,7 @@
         </section>
         <section class="spotlight">
             <div class="image"><img src="images/vaganov.jpg" alt="" /></div><div class="content">
+                <time>12:30-13:00</time>
                 <h2>Жизнь после JS-фреймворков</h2>
                 <p>А, может, ну их? (на самом деле нет)</p>
                 <blockquote>Андрей Ваганов, AdvantShop.net</blockquote>
@@ -131,6 +135,7 @@
         <section class="rest">Перерыв (13:00 - 14:00)</section>
         <section class="spotlight">
             <div class="image"><img src="images/shoot.jpg" alt="" /></div><div class="content">
+                <time>14:00-14:30</time>
                 <h2>Мы вставили сайт в ваш Email</h2>
                 <p>
                   Идеальный Email<br>
@@ -143,6 +148,7 @@
         <section class="spotlight">
             <div class="image"><img src="images/nikbelikov.jpg" alt="nikbelikov's photo" /></div>
             <div class="content">
+                <time>14:30-15:00</time>
                 <h2>Увидеть больше</h2>
                 <p>Как делать сайты, адаптированные для слепых и слабовидящих людей</p>
                 <blockquote>Николай Беликов, Simbirsoft, <a href="http://nikbelikov.ru/" target="_blank">nikbelikov.ru</a></blockquote>
@@ -150,6 +156,7 @@
         </section>
         <section class="spotlight">
             <div class="image"><img src="images/nayanov.jpg" alt="" /></div><div class="content">
+                <time>15:00-15:30</time>
                 <h2>Post-HTML</h2>
                 <p>
                   HTML6, постпроцессоры, БЭМ, вот это все.
@@ -160,6 +167,7 @@
         <section class="spotlight">
             <div class="image"><img src="images/tema-khlebnikov.jpg" alt="" /></div>
             <div class="content">
+                <time>15:30-16:00</time>
                 <h2>Оптимизация CSS и JS в Битриксе</h2>
                 <p>Загружаем только необходимые файлы<br />
                     Объединяем и сжимаем средствами Битрикса<br />
