Change tema's speech description.

--- a/index.html
+++ b/index.html
@@ -158,10 +158,8 @@
             <div class="image"><img src="images/tema-khlebnikov.jpg" alt="" /></div>
             <div class="content">
                 <time>15:00-15:30</time>
-                <h2>Оптимизация CSS и JS в Битриксе</h2>
-                <p>Загружаем только необходимые файлы<br />
-                    Объединяем и сжимаем средствами Битрикса<br />
-                    Перемещаем JS в конец страницы</p>
+                <h2>CSS, JS &amp; Bitrix </h2>
+                <p>Performance «из коробки» и кастомные решения</p>
                 <blockquote>Артём Хлебников, фрилансер</blockquote>
             </div>
         </section>
