Make caps through CSS because boys from web-standarts

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="one" class="wrapper style1 special">
         <div class="inner">
             <header class="major">
-                <h2>НЕОЖИДАННАЯ КОНФЕРЕНЦИЯ ПО ФРОНТЕНДУ v2.0</h2>
+                <h2>Неожиданная конференция по фронтенду v2.0</h2>
 
                 <p>
                   Это снова мы!<br>
